--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="referrer" content="no-referrer">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <meta property="og:title" content="뷰스타 쪼 - borareview">
+    <meta property="og:description" content="(당신을 위한 최저가 큐레이션)">
+    <meta property="og:image" content="https://postfiles.pstatic.net/MjAyNjAxMjVfNzAg/MDAxNzY5MjY5MDg4MDY2.VBM1QAwp9KKEt0y1PjbJ0wMOFSIVHeiQHUlS8I0Ds6Ag.TAU0SGw-nb3FsChQIif-nAj67EcZKhXs5aL1Xi2ey3Yg.JPEG/Gemini_Generated_Image_xemzatxemzatxemz.jpg?type=w966">
+    <meta property="og:url" content="https://zzo-building3.pages.dev/">
+    <meta property="og:type" content="website">
+
     <title>뷰스타 쪼 - borareview</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,17 +27,12 @@
             --main-gap: 22px; 
         }
 
-        body {
-            margin: 0; padding: 0;
-            background-color: var(--bg-color);
-            font-family: 'Noto Sans KR', sans-serif;
-            display: flex; flex-direction: column; align-items: center; min-height: 100vh;
-        }
+        body { margin: 0; padding: 0; background-color: var(--bg-color); font-family: 'Noto Sans KR', sans-serif; display: flex; flex-direction: column; align-items: center; min-height: 100vh; }
 
-        /* --- 상단 헤더 영역 (고정) --- */
+        /* 상단 헤더 (엠블럼형 고정) */
         .top-container { text-align: center; padding-top: 15px; width: 100%; }
         header { display: flex; flex-direction: column; align-items: center; color: white; }
-        .header-main { display: flex; align-items: center; justify-content: center; gap: 10px; margin-bottom: 2px; }
+        .header-main { display: flex; align-items: center; justify-content: center; gap: 12px; margin-bottom: 2px; }
         .profile-wrapper { width: 55px; height: 55px; overflow: hidden; border: none; }
         .profile-img { width: 100%; height: 100%; object-fit: cover; border-radius: 6px; }
         header h1 { font-size: 1.65rem; margin: 0; font-weight: 700; letter-spacing: -1px; }
@@ -39,30 +41,12 @@
         .social-links a { width: 25px; height: 25px; background: rgba(255,255,255,0.2); border-radius: 50%; display: flex; justify-content: center; align-items: center; color: white; text-decoration: none; border: 1px solid rgba(255,255,255,0.3); }
         .social-links a svg { width: 12px; height: 12px; }
 
-        /* --- 메인 레이아웃 (세로 폭 20% 압축 고정) --- */
-        .main-container {
-            display: flex;
-            flex-direction: column;
-            width: 92%;
-            max-width: 480px; 
-            gap: var(--main-gap); 
-            padding: 10px 0 20px;
-            align-items: center;
-        }
-        
-        .section-card {
-            background-color: var(--card-bg);
-            border-radius: 30px;
-            padding: 14px 20px; 
-            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
-            box-sizing: border-box;
-            width: 100%;
-            overflow: hidden; 
-        }
-
+        /* 메인 레이아웃 (세로 폭 20% 압축 고정) */
+        .main-container { display: flex; flex-direction: column; width: 92%; max-width: 480px; gap: var(--main-gap); padding: 10px 0 20px; align-items: center; }
+        .section-card { background-color: var(--card-bg); border-radius: 30px; padding: 14px 20px; box-shadow: 0 10px 30px rgba(0,0,0,0.1); box-sizing: border-box; width: 100%; overflow: hidden; }
         .section-title { font-size: 1.05rem; font-weight: 700; margin-bottom: 12px; color: #333; text-align: center; }
 
-        /* 입력 및 결과 박스 */
+        /* 결과창 스타일 */
         .calc-group { margin-bottom: 8px; }
         .calc-label { display: block; font-size: 0.8rem; color: #666; margin-bottom: 3px; font-weight: 500; }
         .calc-input, .calc-select { width: 100%; padding: 8px 12px; border: 1px solid #eee; border-radius: 10px; font-size: 0.95rem; outline: none; box-sizing: border-box; background-color: white; font-family: inherit; }
@@ -73,41 +57,25 @@
         .res-box.active .val { color: var(--point-pink); }
         .avg-result-box { background: #eefaf3; border-radius: 10px; padding: 10px; text-align: center; margin-bottom: 10px; }
 
-        /* 핫딜 아이템 리스트 */
+        /* 핫딜 및 운세 */
         .deal-group { width: 100%; display: flex; flex-direction: column; gap: 10px; }
         .link-item { display: flex; align-items: center; background: #fff; border: 1px solid #eee; border-radius: 20px; padding: 10px; text-decoration: none; width: 100%; box-sizing: border-box; }
-        .link-thumb { width: 45px; height: 45px; border-radius: 10px; object-fit: cover; margin-right: 12px; flex-shrink: 0; }
+        .link-thumb { width: 45px; height: 45px; border-radius: 8px; object-fit: cover; margin-right: 12px; flex-shrink: 0; }
         .link-text { font-size: 1.05rem; font-weight: 500; color: #2c2c2c; line-height: 1.3; flex-grow: 1; letter-spacing: -0.5px; }
         .effect-img { width: 50px; height: 35px; border-radius: 5px; object-fit: cover; margin-left: 10px; flex-shrink: 0; border: 1px solid #f0f0f0; }
 
-        /* 별자리 카드 */
         .horo-card { background-color: var(--gold-bg); border-radius: 30px; padding: 14px 20px; box-shadow: 0 10px 30px rgba(0,0,0,0.1); border: 1px solid #ffeeba; width: 100%; box-sizing: border-box; overflow: hidden; }
         .horo-content { font-size: 0.82rem; color: #444; line-height: 1.7; margin-top: 10px; text-align: left; padding: 15px; background: white; border-radius: 22px; display: none; border: 1px dashed #ffeeba; }
         .lucky-item-card { margin-top: 12px; padding: 10px; background: #fff0f6; border-radius: 18px; display: flex; align-items: center; text-decoration: none; border: 1px solid #ffdeeb; }
         .lucky-item-card img { width: 50px; height: 50px; border-radius: 12px; margin-right: 12px; object-fit: cover; }
-        .lucky-item-reason { font-size: 0.72rem; color: var(--point-pink); font-weight: 700; margin-bottom: 2px; display: block; }
-        .lucky-item-name { font-size: 0.9rem; font-weight: 500; color: #333; }
 
         /* 방문객 카운터 */
-        .visitor-counter {
-            margin: 15px 0 5px;
-            font-size: 0.75rem;
-            color: rgba(255, 255, 255, 0.9);
-            background: rgba(0, 0, 0, 0.15);
-            padding: 8px 18px;
-            border-radius: 20px;
-            display: flex;
-            gap: 15px;
-            border: 1px solid rgba(255, 255, 255, 0.2);
-        }
+        .visitor-counter { margin: 15px 0 5px; font-size: 0.75rem; color: rgba(255, 255, 255, 0.9); background: rgba(0, 0, 0, 0.15); padding: 8px 18px; border-radius: 20px; display: flex; gap: 15px; border: 1px solid rgba(255, 255, 255, 0.2); }
         .visitor-counter b { color: #fff; font-weight: 700; }
-
         footer { width: 100%; text-align: center; padding-bottom: 30px; display: flex; flex-direction: column; align-items: center; }
         .footer-text { font-size: 0.65rem; color: rgba(255, 255, 255, 0.7); line-height: 1.6; padding: 0 20px; margin-top: 10px; }
 
-        @media (max-width: 480px) {
-            .section-card, .horo-card { padding: 12px 18px; }
-        }
+        @media (max-width: 480px) { .section-card, .horo-card { padding: 12px 18px; } }
     </style>
 </head>
 <body onload="initCounter()">
@@ -135,7 +103,7 @@
             <div class="section-title">📈 평균 키 & 미용 몸무게 통합 분석</div>
             <div style="display: flex; gap: 8px; margin-bottom: 8px;"><div class="calc-group" style="flex: 1;"><label class="calc-label">성별</label><select id="analGender" class="calc-select" onchange="calcAnalysis()"><option value="female" selected>여성</option><option value="male">남성</option></select></div><div class="calc-group" style="flex: 1;"><label class="calc-label">나이대</label><select id="analAge" class="calc-select" onchange="calcAnalysis()"><option value="20">20대</option><option value="30">30대</option><option value="40">40대</option><option value="50">50대+</option></select></div></div>
             <div class="calc-group"><label class="calc-label">당신의 키(cm)</label><input type="number" id="analH" class="calc-input" placeholder="예: 163" oninput="calcAnalysis()"></div>
-            <div class="avg-result-box"><div id="analAvgResult" style="color:var(--nice-green); font-size:0.85rem; font-weight:500; text-align:center;">키를 입력하세요.</div></div>
+            <div class="avg-result-box"><div id="analAvgResult" style="color:var(--nice-green); font-size:0.85rem; font-weight:500; text-align:center;">수치를 입력하세요.</div></div>
             <div style="display: flex; gap: 8px;"><div class="res-box" style="background:#f8f9fa;"><div class="val" id="stdW">-</div><div class="label">표준 체중</div></div><div class="res-box active"><div class="val" id="beautyW">-</div><div class="label">미용 체중</div></div></div>
         </div>
 
@@ -157,19 +125,8 @@
 
         <div class="horo-card">
             <div class="section-title" style="color: #856404;">🔮 별자리 운세 & 행운 아이템</div>
-            <div class="calc-group">
-                <select id="zodiacSelect" class="calc-select" onchange="showHoroscope()">
-                    <option value="">별자리를 선택하세요</option>
-                    <option value="1">물병자리 (1.20~2.18)</option><option value="2">물고기자리 (2.19~3.20)</option>
-                    <option value="3">양자리 (3.21~4.19)</option><option value="4">황소자리 (4.20~5.20)</option>
-                    <option value="5">쌍둥이자리 (5.21~6.21)</option><option value="6">게자리 (6.22~7.22)</option>
-                    <option value="7">사자자리 (7.23~8.22)</option><option value="8">처녀자리 (8.23~9.23)</option>
-                    <option value="9">천칭자리 (9.24~10.22)</option><option value="10">전갈자리 (10.23~11.22)</option>
-                    <option value="11">사수자리 (11.23~12.24)</option><option value="12">염소자리 (12.25~1.19)</option>
-                </select>
-            </div>
-            <div id="horoContent" class="horo-content"></div>
-            <div id="luckyItemArea"></div>
+            <div class="calc-group"><select id="zodiacSelect" class="calc-select" onchange="showHoroscope()"><option value="">별자리를 선택하세요</option><option value="1">물병자리 (1.20~2.18)</option><option value="2">물고기자리 (2.19~3.20)</option><option value="3">양자리 (3.21~4.19)</option><option value="4">황소자리 (4.20~5.20)</option><option value="5">쌍둥이자리 (5.21~6.21)</option><option value="6">게자리 (6.22~7.22)</option><option value="7">사자자리 (7.23~8.22)</option><option value="8">처녀자리 (8.23~9.23)</option><option value="9">천칭자리 (9.24~10.22)</option><option value="10">전갈자리 (10.23~11.22)</option><option value="11">사수자리 (11.23~12.24)</option><option value="12">염소자리 (12.25~1.19)</option></select></div>
+            <div id="horoContent" class="horo-content"></div><div id="luckyItemArea"></div>
         </div>
 
         <div class="deal-group">
@@ -180,20 +137,13 @@
     </div>
 
     <footer>
-        <div class="visitor-counter">
-            <span>Today: <b id="today-count">...</b></span>
-            <span>Total: <b id="total-count">...</b></span>
-        </div>
-        <p class="footer-text">
-            *위 링크로 구매시 크리에이터에게 소정의 수수료가 지급될 수 있으나 상품가격에 변동은 없습니다.<br>
-            이 포스팅은 쿠팡 파트너스 활동의 일환으로, 이에 따른 일정액의 수수료를 제공받습니다.
-        </p>
+        <div class="visitor-counter"><span>Today: <b id="today-count">...</b></span><span>Total: <b id="total-count">...</b></span></div>
+        <p class="footer-text">*위 링크로 구매시 크리에이터에게 소정의 수수료가 지급될 수 있으나 상품가격에 변동은 없습니다.<br>이 포스팅은 쿠팡 파트너스 활동의 일환으로, 이에 따른 일정액의 수수료를 제공받습니다.</p>
     </footer>
 
     <script>
-        // --- [한국 시간 기준 측정 로직] ---
         async function initCounter() {
-            const namespace = "borareview_v2_fix"; 
+            const namespace = "borareview_v2_final"; 
             const kstDate = new Intl.DateTimeFormat('ko-KR', { timeZone: 'Asia/Seoul', year: 'numeric', month: '2-digit', day: '2-digit' }).format(new Date()).replace(/\. /g, '').replace(/\./g, '');
             const todayKey = `today_${kstDate}`;
             try {
@@ -203,27 +153,22 @@
                 const todayRes = await fetch(`https://api.counterapi.dev/v1/${namespace}/${todayKey}/up`);
                 const todayData = await todayRes.json();
                 document.getElementById('today-count').innerText = todayData.count.toLocaleString();
-            } catch (e) { document.getElementById('today-count').innerText = "1"; document.getElementById('total-count').innerText = "100+"; }
+            } catch (e) { document.getElementById('today-count').innerText = "1"; document.getElementById('total-count').innerText = "1,000+"; }
         }
 
-        // --- [체중 분석 로직] ---
         function calcAnalysis() {
             const avgData = { male: { 20: 174.4, 30: 174.9, 40: 173.2, 50: 170.5 }, female: { 20: 161.3, 30: 161.9, 40: 160.2, 50: 157.6 } };
-            const g = document.getElementById('analGender').value, a = document.getElementById('analAge').value, h = parseFloat(document.getElementById('analH').value);
-            const resBox = document.getElementById('analAvgResult'), std = document.getElementById('stdW'), bty = document.getElementById('beautyW');
+            const g = document.getElementById('analGender').value, h = parseFloat(document.getElementById('analH').value);
             if (h > 0) {
-                const avgH = avgData[g][a], diff = (h - avgH).toFixed(1);
-                resBox.innerHTML = `평균 키: <b>${avgH}cm</b> (${diff >= 0 ? diff + 'cm 큼' : Math.abs(diff) + 'cm 작음'})`;
-                std.innerText = (Math.pow(h/100, 2) * 22).toFixed(1) + "kg";
-                bty.innerText = (Math.pow(h/100, 2) * 19).toFixed(1) + "kg";
+                document.getElementById('stdW').innerText = (Math.pow(h/100, 2) * 22).toFixed(1) + "kg";
+                document.getElementById('beautyW').innerText = (Math.pow(h/100, 2) * 19).toFixed(1) + "kg";
             }
         }
         function calcBMI() {
-            const h = document.getElementById('bmiH').value / 100, w = document.getElementById('bmiW').value, res = document.getElementById('bmiRes'), status = document.getElementById('bmiStatus');
-            if (h > 0 && w > 0) { const bmi = (w / (h * h)).toFixed(1); res.innerText = bmi; status.innerText = bmi < 18.5 ? "저체중" : bmi < 23 ? "정상" : "과체중 이상"; }
+            const h = document.getElementById('bmiH').value / 100, w = document.getElementById('bmiW').value;
+            if (h > 0 && w > 0) { document.getElementById('bmiRes').innerText = (w / (h * h)).toFixed(1); }
         }
 
-        // --- [복구된 12종 풍수템 및 로테이션 로직] ---
         const fengShuiItems = [
             { name: "싱잉볼", reason: "맑은 소리가 필요합니다. 현관에서 기운을 정화시켜보세요.", url: "https://link.coupang.com/a/dyKsFd", img: "https://t4c.coupangcdn.com/thumbnails/remote/212x212ex/image/vendor_inventory/cef7/0bc01026da60025c185c3140e2c75143dfa47f067f2d004af9588d69848d.jpg" },
             { name: "액막이 북어", reason: "나쁜 기운은 현관에서 막으세요. 복의 통로를 지키는 비결입니다.", url: "https://link.coupang.com/a/dyKusA", img: "https://t5a.coupangcdn.com/thumbnails/remote/212x212ex/image/vendor_inventory/396e/25b4bf5ff64f9001915d9ddc11d88d1b19bfd0cfaf022c3d6994d198d22d.jpg" },
@@ -239,11 +184,7 @@
             { name: "가정용 홈사우나", reason: "따뜻한 기운으로 정체된 기를 시원하게 소통시키세요.", url: "https://link.coupang.com/a/dyKSYq", img: "https://thumbnail5.coupangcdn.com/thumbnails/remote/212x212ex/image/vendor_inventory/4f94/6c6381ff9643ca814ef14cd915e80d1e36b905111da517b18dc7930d9795.jpg" }
         ];
 
-        const experts = [
-            "🔱 <b>오늘의 천체 흐름 정밀 분석</b><br>토성과 목성이 조화를 이루는 길일입니다. 공들여 온 일들이 결실을 맺기 시작하니 내실을 기하는 것이 유리합니다. 오후 2시에서 4시 사이가 당신의 운기가 가장 강력하게 빛나는 시간입니다.<br>🏠 <b>풍수 조언</b>: 현관을 밝게 유지하고 불필요한 영수증을 정리하여 기의 순환을 도우세요.",
-            "🔥 <b>오늘의 천체 흐름 정밀 분석</b><br>화성의 열정적인 에너지가 당신을 자극하는 날입니다. 새로운 결정을 내리기에 적합하지만 겸손함을 유지해야 유리합니다. 저녁 7시 이후 소중한 인연과의 대화에서 해답을 얻게 될 것입니다.<br>🏠 <b>풍수 조언</b>: 외부의 탁한 기운을 차단하세요. 현관 앞에 맑은 기운을 주는 물건을 두어 복의 통로를 관리하는 것이 좋습니다.",
-            "🌬️ <b>오늘의 천체 흐름 정밀 분석</b><br>원활한 소통의 문이 열리는 기분 좋은 날입니다. 창의적인 아이디어가 샘솟으니 중요한 기획은 오늘 마무리하세요. 푸른색 계열의 옷차림이 타인에게 신뢰감을 높여 운을 크게 돕습니다.<br>🏠 <b>풍수 조언</b>: 거실 화분의 잎을 정성스럽게 닦아주세요. 식물의 호흡이 원활해지는 만큼 당신의 운기도 함께 트이게 됩니다."
-        ];
+        const experts = [ "🔱 <b>오늘의 천체 흐름 정밀 분석</b><br>토성과 목성이 조화를 이루는 길일입니다. 당신이 공들여 온 일들이 결실을 맺기 시작하니 내실을 기하는 것이 유리합니다.", "🔥 <b>오늘의 천체 흐름 정밀 분석</b><br>화성의 열정적인 에너지가 당신을 자극하는 날입니다. 새로운 결정을 내리기에 적합합니다." ];
 
         function showHoroscope() {
             const content = document.getElementById('horoContent'), sign = document.getElementById('zodiacSelect').value, itemArea = document.getElementById('luckyItemArea');
