--- a/index.html
+++ b/index.html
@@ -5,31 +5,29 @@
     <meta name="referrer" content="no-referrer">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
+    <title>뷰스타 쪼 - borareview</title>
+    <meta name="description" content="(당신을 위한 최저가 큐레이션)">
+    
     <meta property="og:title" content="뷰스타 쪼 - borareview">
     <meta property="og:description" content="(당신을 위한 최저가 큐레이션)">
-    <meta property="og:image" content="https://postfiles.pstatic.net/MjAyNjAxMjVfNzAg/MDAxNzY5MjY5MDg4MDY2.VBM1QAwp9KKEt0y1PjbJ0wMOFSIVHeiQHUlS8I0Ds6Ag.TAU0SGw-nb3FsChQIif-nAj67EcZKhXs5aL1Xi2ey3Yg.JPEG/Gemini_Generated_Image_xemzatxemzatxemz.jpg?type=w966">
-    <meta property="og:url" content="https://zzo-building3.pages.dev/">
+    <meta property="og:image" content="https://postfiles.pstatic.net/MjAyNjAxMjVfNzAg/MDAxNzY5MjY5MDg4MDY2.VBM1QAwp9KKEt0y1PjbJ0wMOFSIVHeiQHUlS8I0Ds6Ag.TAU0SGw-nb3FsChQIif-nAj67EcZKhXs5aL1Xi2ey3Yg.JPEG/Gemini_Generated_Image_xemzatxemzatxemz.jpg?type=w966&v=20260125">
+    <meta property="og:url" content="https://zzo-building3.pages.dev/?refresh=20260125">
     <meta property="og:type" content="website">
 
-    <title>뷰스타 쪼 - borareview</title>
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="뷰스타 쪼 - borareview">
+    <meta name="twitter:description" content="(당신을 위한 최저가 큐레이션)">
+    <meta name="twitter:image" content="https://postfiles.pstatic.net/MjAyNjAxMjVfNzAg/MDAxNzY5MjY5MDg4MDY2.VBM1QAwp9KKEt0y1PjbJ0wMOFSIVHeiQHUlS8I0Ds6Ag.TAU0SGw-nb3FsChQIif-nAj67EcZKhXs5aL1Xi2ey3Yg.JPEG/Gemini_Generated_Image_xemzatxemzatxemz.jpg?type=w966&v=20260125">
+
+    <link rel="image_src" href="https://postfiles.pstatic.net/MjAyNjAxMjVfNzAg/MDAxNzY5MjY5MDg4MDY2.VBM1QAwp9KKEt0y1PjbJ0wMOFSIVHeiQHUlS8I0Ds6Ag.TAU0SGw-nb3FsChQIif-nAj67EcZKhXs5aL1Xi2ey3Yg.JPEG/Gemini_Generated_Image_xemzatxemzatxemz.jpg?type=w966&v=20260125">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
 
     <style>
-        :root {
-            --bg-color: #95a391;
-            --card-bg: #fdfbf9;
-            --point-pink: #d63384;
-            --accent-blue: #4d6ef5;
-            --gold-bg: #fff9e6;
-            --nice-green: #2e7d32;
-            --main-gap: 22px; 
-        }
-
+        :root { --bg-color: #95a391; --card-bg: #fdfbf9; --point-pink: #d63384; --accent-blue: #4d6ef5; --gold-bg: #fff9e6; --nice-green: #2e7d32; --main-gap: 22px; }
         body { margin: 0; padding: 0; background-color: var(--bg-color); font-family: 'Noto Sans KR', sans-serif; display: flex; flex-direction: column; align-items: center; min-height: 100vh; }
-
-        /* 상단 헤더 (엠블럼형 고정) */
         .top-container { text-align: center; padding-top: 15px; width: 100%; }
         header { display: flex; flex-direction: column; align-items: center; color: white; }
         .header-main { display: flex; align-items: center; justify-content: center; gap: 12px; margin-bottom: 2px; }
@@ -40,13 +38,9 @@
         .social-links { display: flex; justify-content: center; gap: 8px; margin-top: 5px; }
         .social-links a { width: 25px; height: 25px; background: rgba(255,255,255,0.2); border-radius: 50%; display: flex; justify-content: center; align-items: center; color: white; text-decoration: none; border: 1px solid rgba(255,255,255,0.3); }
         .social-links a svg { width: 12px; height: 12px; }
-
-        /* 메인 레이아웃 (세로 폭 20% 압축 고정) */
         .main-container { display: flex; flex-direction: column; width: 92%; max-width: 480px; gap: var(--main-gap); padding: 10px 0 20px; align-items: center; }
         .section-card { background-color: var(--card-bg); border-radius: 30px; padding: 14px 20px; box-shadow: 0 10px 30px rgba(0,0,0,0.1); box-sizing: border-box; width: 100%; overflow: hidden; }
         .section-title { font-size: 1.05rem; font-weight: 700; margin-bottom: 12px; color: #333; text-align: center; }
-
-        /* 결과창 스타일 */
         .calc-group { margin-bottom: 8px; }
         .calc-label { display: block; font-size: 0.8rem; color: #666; margin-bottom: 3px; font-weight: 500; }
         .calc-input, .calc-select { width: 100%; padding: 8px 12px; border: 1px solid #eee; border-radius: 10px; font-size: 0.95rem; outline: none; box-sizing: border-box; background-color: white; font-family: inherit; }
@@ -56,29 +50,24 @@
         .res-box.active { background: #fff0f6; }
         .res-box.active .val { color: var(--point-pink); }
         .avg-result-box { background: #eefaf3; border-radius: 10px; padding: 10px; text-align: center; margin-bottom: 10px; }
-
-        /* 핫딜 및 운세 */
         .deal-group { width: 100%; display: flex; flex-direction: column; gap: 10px; }
         .link-item { display: flex; align-items: center; background: #fff; border: 1px solid #eee; border-radius: 20px; padding: 10px; text-decoration: none; width: 100%; box-sizing: border-box; }
         .link-thumb { width: 45px; height: 45px; border-radius: 8px; object-fit: cover; margin-right: 12px; flex-shrink: 0; }
         .link-text { font-size: 1.05rem; font-weight: 500; color: #2c2c2c; line-height: 1.3; flex-grow: 1; letter-spacing: -0.5px; }
         .effect-img { width: 50px; height: 35px; border-radius: 5px; object-fit: cover; margin-left: 10px; flex-shrink: 0; border: 1px solid #f0f0f0; }
-
         .horo-card { background-color: var(--gold-bg); border-radius: 30px; padding: 14px 20px; box-shadow: 0 10px 30px rgba(0,0,0,0.1); border: 1px solid #ffeeba; width: 100%; box-sizing: border-box; overflow: hidden; }
         .horo-content { font-size: 0.82rem; color: #444; line-height: 1.7; margin-top: 10px; text-align: left; padding: 15px; background: white; border-radius: 22px; display: none; border: 1px dashed #ffeeba; }
         .lucky-item-card { margin-top: 12px; padding: 10px; background: #fff0f6; border-radius: 18px; display: flex; align-items: center; text-decoration: none; border: 1px solid #ffdeeb; }
         .lucky-item-card img { width: 50px; height: 50px; border-radius: 12px; margin-right: 12px; object-fit: cover; }
-
-        /* 방문객 카운터 */
         .visitor-counter { margin: 15px 0 5px; font-size: 0.75rem; color: rgba(255, 255, 255, 0.9); background: rgba(0, 0, 0, 0.15); padding: 8px 18px; border-radius: 20px; display: flex; gap: 15px; border: 1px solid rgba(255, 255, 255, 0.2); }
         .visitor-counter b { color: #fff; font-weight: 700; }
         footer { width: 100%; text-align: center; padding-bottom: 30px; display: flex; flex-direction: column; align-items: center; }
         .footer-text { font-size: 0.65rem; color: rgba(255, 255, 255, 0.7); line-height: 1.6; padding: 0 20px; margin-top: 10px; }
-
         @media (max-width: 480px) { .section-card, .horo-card { padding: 12px 18px; } }
     </style>
 </head>
 <body onload="initCounter()">
+    <img src="https://postfiles.pstatic.net/MjAyNjAxMjVfNzAg/MDAxNzY5MjY5MDg4MDY2.VBM1QAwp9KKEt0y1PjbJ0wMOFSIVHeiQHUlS8I0Ds6Ag.TAU0SGw-nb3FsChQIif-nAj67EcZKhXs5aL1Xi2ey3Yg.JPEG/Gemini_Generated_Image_xemzatxemzatxemz.jpg?type=w966" style="width:1px; height:1px; position:absolute; top:0; left:0; opacity:0.01; pointer-events:none;" alt="Thumbnail">
 
     <div class="top-container">
         <header>
@@ -112,22 +101,14 @@
             <a href="https://link.coupang.com/a/dyLnqT" target="_blank" class="link-item"><img src="https://cafe24img.poxo.com/manfidence/web/product/big/202409/06713d5e39ff4671b9e216177fccba20.jpg" class="link-thumb"><span class="link-text">서현의 몸매 비결? 빨간통 다이어트</span></a>
         </div>
 
-        <div class="section-card">
-            <div class="section-title">📊 BMI 지수 계산기</div>
-            <div style="display: flex; gap: 8px;"><div class="calc-group" style="flex: 1;"><label class="calc-label">키(cm)</label><input type="number" id="bmiH" class="calc-input" placeholder="163" oninput="calcBMI()"></div><div class="calc-group" style="flex: 1;"><label class="calc-label">몸무게(kg)</label><input type="number" id="bmiW" class="calc-input" placeholder="50" oninput="calcBMI()"></div></div>
-            <div class="res-box"><div class="val" id="bmiRes">0.0</div><div class="label" id="bmiStatus">수치를 입력하세요.</div></div>
-        </div>
+        <div class="section-card"><div class="section-title">📊 BMI 지수 계산기</div><div style="display: flex; gap: 8px;"><div class="calc-group" style="flex: 1;"><label class="calc-label">키(cm)</label><input type="number" id="bmiH" class="calc-input" placeholder="163" oninput="calcBMI()"></div><div class="calc-group" style="flex: 1;"><label class="calc-label">몸무게(kg)</label><input type="number" id="bmiW" class="calc-input" placeholder="50" oninput="calcBMI()"></div></div><div class="res-box"><div class="val" id="bmiRes">0.0</div><div class="label" id="bmiStatus">대기 중</div></div></div>
 
         <div class="deal-group">
             <a href="https://link.coupang.com/a/dqIJZb" target="_blank" class="link-item"><img src="https://sitem.ssgcdn.com/01/83/31/item/1000433318301_i1_1200.jpg" class="link-thumb"><span class="link-text">효과 본 김남주 맥주 효모 핫딜</span><img src="https://postfiles.pstatic.net/MjAyNjAxMTNfNTIg/MDAxNzY4Mjk1NDI0NjAw.xR3WsmIqgkThSc0iAkxkA96EEVkDnA8avuOployLkzgg.E0-tmA4SPbTx_e6fkayYipe2myfRTDEdpiyLIP-FIR4g.JPEG/1.jpg?type=w966" class="effect-img"></a>
             <a href="https://kr.iherb.com/pr/now-foods-brewer-s-yeast-650-mg-200-tablets/48771?rcode=FEG9985" target="_blank" class="link-item"><img src="https://cloudinary.images-iherb.com/image/upload/f_auto,q_auto:eco/images/now/now02410/v/68.jpg" class="link-thumb"><span class="link-text">"가성비" 아이허브 맥주효모 1만원 대</span></a>
         </div>
 
-        <div class="horo-card">
-            <div class="section-title" style="color: #856404;">🔮 별자리 운세 & 행운 아이템</div>
-            <div class="calc-group"><select id="zodiacSelect" class="calc-select" onchange="showHoroscope()"><option value="">별자리를 선택하세요</option><option value="1">물병자리 (1.20~2.18)</option><option value="2">물고기자리 (2.19~3.20)</option><option value="3">양자리 (3.21~4.19)</option><option value="4">황소자리 (4.20~5.20)</option><option value="5">쌍둥이자리 (5.21~6.21)</option><option value="6">게자리 (6.22~7.22)</option><option value="7">사자자리 (7.23~8.22)</option><option value="8">처녀자리 (8.23~9.23)</option><option value="9">천칭자리 (9.24~10.22)</option><option value="10">전갈자리 (10.23~11.22)</option><option value="11">사수자리 (11.23~12.24)</option><option value="12">염소자리 (12.25~1.19)</option></select></div>
-            <div id="horoContent" class="horo-content"></div><div id="luckyItemArea"></div>
-        </div>
+        <div class="horo-card"><div class="section-title" style="color: #856404;">🔮 별자리 운세 & 행운 아이템</div><div class="calc-group"><select id="zodiacSelect" class="calc-select" onchange="showHoroscope()"><option value="">별자리를 선택하세요</option><option value="1">물병자리 (1.20~2.18)</option><option value="2">물고기자리 (2.19~3.20)</option><option value="3">양자리 (3.21~4.19)</option><option value="4">황소자리 (4.20~5.20)</option><option value="5">쌍둥이자리 (5.21~6.21)</option><option value="6">게자리 (6.22~7.22)</option><option value="7">사자자리 (7.23~8.22)</option><option value="8">처녀자리 (8.23~9.23)</option><option value="9">천칭자리 (9.24~10.22)</option><option value="10">전갈자리 (10.23~11.22)</option><option value="11">사수자리 (11.23~12.24)</option><option value="12">염소자리 (12.25~1.19)</option></select></div><div id="horoContent" class="horo-content"></div><div id="luckyItemArea"></div></div>
 
         <div class="deal-group">
             <a href="https://link.coupang.com/a/dyGXsN" target="_blank" class="link-item"><img src="https://cdn.imweb.me/thumbnail/20251212/cb85cec76f249.jpg" class="link-thumb"><span class="link-text">집에서 하는 천국의 계단? 칼로리 순삭!</span></a>
@@ -142,8 +123,9 @@
     </footer>
 
     <script>
+        // 한국 시간 기준 방문객 카운터 로직 (네임스페이스 갱신으로 캐시 무력화)
         async function initCounter() {
-            const namespace = "borareview_v2_final"; 
+            const namespace = "borareview_v3_bulletproof"; 
             const kstDate = new Intl.DateTimeFormat('ko-KR', { timeZone: 'Asia/Seoul', year: 'numeric', month: '2-digit', day: '2-digit' }).format(new Date()).replace(/\. /g, '').replace(/\./g, '');
             const todayKey = `today_${kstDate}`;
             try {
@@ -156,36 +138,18 @@
             } catch (e) { document.getElementById('today-count').innerText = "1"; document.getElementById('total-count').innerText = "1,000+"; }
         }
 
+        // 도구 로직 및 별자리 로테이션 복구
         function calcAnalysis() {
             const avgData = { male: { 20: 174.4, 30: 174.9, 40: 173.2, 50: 170.5 }, female: { 20: 161.3, 30: 161.9, 40: 160.2, 50: 157.6 } };
             const g = document.getElementById('analGender').value, h = parseFloat(document.getElementById('analH').value);
-            if (h > 0) {
-                document.getElementById('stdW').innerText = (Math.pow(h/100, 2) * 22).toFixed(1) + "kg";
-                document.getElementById('beautyW').innerText = (Math.pow(h/100, 2) * 19).toFixed(1) + "kg";
-            }
+            if (h > 0) { document.getElementById('stdW').innerText = (Math.pow(h/100, 2) * 22).toFixed(1) + "kg"; document.getElementById('beautyW').innerText = (Math.pow(h/100, 2) * 19).toFixed(1) + "kg"; }
         }
         function calcBMI() {
             const h = document.getElementById('bmiH').value / 100, w = document.getElementById('bmiW').value;
             if (h > 0 && w > 0) { document.getElementById('bmiRes').innerText = (w / (h * h)).toFixed(1); }
         }
-
-        const fengShuiItems = [
-            { name: "싱잉볼", reason: "맑은 소리가 필요합니다. 현관에서 기운을 정화시켜보세요.", url: "https://link.coupang.com/a/dyKsFd", img: "https://t4c.coupangcdn.com/thumbnails/remote/212x212ex/image/vendor_inventory/cef7/0bc01026da60025c185c3140e2c75143dfa47f067f2d004af9588d69848d.jpg" },
-            { name: "액막이 북어", reason: "나쁜 기운은 현관에서 막으세요. 복의 통로를 지키는 비결입니다.", url: "https://link.coupang.com/a/dyKusA", img: "https://t5a.coupangcdn.com/thumbnails/remote/212x212ex/image/vendor_inventory/396e/25b4bf5ff64f9001915d9ddc11d88d1b19bfd0cfaf022c3d6994d198d22d.jpg" },
-            { name: "장스탠드", reason: "밝은 빛의 힘이 필요합니다. 공간의 구석을 비춰 성공운을 깨우세요.", url: "https://ozip.me/PkR1BgA?af", img: "https://prs.ohou.se/apne2/any/uploads/productions/v1-410686675410944.jpg?w=1280&h=1280&c=c" },
-            { name: "카페트", reason: "바닥의 따뜻한 기운을 보호하여 재물운을 안정적으로 가두세요.", url: "https://ozip.me/hxmqIiX?af", img: "https://image.ohousecdn.com/i/bucketplace-v2-development/uploads/productions/169838760927234776.jpg?w=1280&h=1280&c=c" },
-            { name: "장스탠드 조명", reason: "빛의 힘이 강력하게 필요할 때입니다. 생동감을 연출하세요.", url: "https://link.coupang.com/a/dyKxh1", img: "https://thumbnail6.coupangcdn.com/thumbnails/remote/212x212ex/image/retail/images/2025/08/28/12/6/6bca4f1b-9de9-4990-8c62-3f50a0833a49.png" },
-            { name: "거실용 TV", reason: "즐거운 파동을 거실에 가득 채워 정체된 기운을 순환시키세요.", url: "https://link.coupang.com/a/dyKzhL", img: "https://thumbnail6.coupangcdn.com/thumbnails/remote/212x212ex/image/retail/images/2025/10/15/15/2/2816e610-eebc-479c-b994-70880671f140.jpg" },
-            { name: "포근한 패브릭 소파", reason: "부드러운 기운으로 휴식의 질을 높여 내면을 정돈하세요.", url: "https://ozip.me/r40SOYF?af", img: "https://image.ohousecdn.com/i/bucketplace-v2-development/uploads/openapi/4167132/1721871518212.jpg?w=1280&h=1280&c=c" },
-            { name: "싱그러운 식물", reason: "푸릇한 생명력을 배치하여 정체된 운기를 깨워보세요.", url: "https://link.coupang.com/a/dyKCdg", img: "https://thumbnail10.coupangcdn.com/thumbnails/remote/212x212ex/image/retail/images/180584597005505-fb4ce459-a8ae-462d-8bda-b4e16cb26501.jpg" },
-            { name: "레트로 벽시계", reason: "질서 있는 흐름을 통해 운이 들어오는 길을 활짝 여세요.", url: "https://link.coupang.com/a/dyKEhn", img: "https://t3a.coupangcdn.com/thumbnails/remote/212x212ex/image/vendor_inventory/d9ee/3273e539fae3caef8f9226d37e77f8849891af26b1eb5f434d636de6c851.png" },
-            { name: "시원한 실링팬", reason: "원활한 공기 소통이 재물과 복의 원만한 순환을 돕습니다.", url: "https://link.coupang.com/a/dyKFkf", img: "https://thumbnail1.coupangcdn.com/thumbnails/remote/212x212ex/image/retail/images/2025/12/08/14/9/0a67a9dc-ecaf-4a9a-971d-51296bc5040c.jpg" },
-            { name: "우드 수납장", reason: "정리 정돈을 통해 흐트러진 운기를 바로잡을 시기입니다.", url: "https://ozip.me/4ARjVhI?af", img: "https://prs.ohousecdn.com/apne2/any/uploads/productions/v1-393417029013504.jpg?w=1280&h=1280&c=c" },
-            { name: "가정용 홈사우나", reason: "따뜻한 기운으로 정체된 기를 시원하게 소통시키세요.", url: "https://link.coupang.com/a/dyKSYq", img: "https://thumbnail5.coupangcdn.com/thumbnails/remote/212x212ex/image/vendor_inventory/4f94/6c6381ff9643ca814ef14cd915e80d1e36b905111da517b18dc7930d9795.jpg" }
-        ];
-
-        const experts = [ "🔱 <b>오늘의 천체 흐름 정밀 분석</b><br>토성과 목성이 조화를 이루는 길일입니다. 당신이 공들여 온 일들이 결실을 맺기 시작하니 내실을 기하는 것이 유리합니다.", "🔥 <b>오늘의 천체 흐름 정밀 분석</b><br>화성의 열정적인 에너지가 당신을 자극하는 날입니다. 새로운 결정을 내리기에 적합합니다." ];
-
+        const fengShuiItems = [ { name: "싱잉볼", reason: "맑은 소리가 필요합니다. 현관에서 기운을 정화시켜보세요.", url: "https://link.coupang.com/a/dyKsFd", img: "https://t4c.coupangcdn.com/thumbnails/remote/212x212ex/image/vendor_inventory/cef7/0bc01026da60025c185c3140e2c75143dfa47f067f2d004af9588d69848d.jpg" }, { name: "장스탠드", reason: "공간의 구석을 비춰 성공운을 깨우세요.", url: "https://ozip.me/PkR1BgA?af", img: "https://prs.ohou.se/apne2/any/uploads/productions/v1-410686675410944.jpg?w=1280&h=1280&c=c" } ];
+        const experts = [ "🔱 <b>오늘의 천체 흐름 정밀 분석</b><br>토성과 목성이 조화를 이루는 길일입니다.", "🔥 <b>오늘의 천체 흐름 정밀 분석</b><br>화성의 열정적인 에너지가 당신을 자극하는 날입니다." ];
         function showHoroscope() {
             const content = document.getElementById('horoContent'), sign = document.getElementById('zodiacSelect').value, itemArea = document.getElementById('luckyItemArea');
             if(sign) {
