--- a/index.html
+++ b/index.html
@@ -7,19 +7,14 @@
     
     <title>뷰스타 쪼 - borareview</title>
     <meta name="description" content="(당신을 위한 최저가 큐레이션)">
-    
     <meta property="og:title" content="뷰스타 쪼 - borareview">
     <meta property="og:description" content="(당신을 위한 최저가 큐레이션)">
-    <meta property="og:image" content="https://postfiles.pstatic.net/MjAyNjAxMjVfNzAg/MDAxNzY5MjY5MDg4MDY2.VBM1QAwp9KKEt0y1PjbJ0wMOFSIVHeiQHUlS8I0Ds6Ag.TAU0SGw-nb3FsChQIif-nAj67EcZKhXs5aL1Xi2ey3Yg.JPEG/Gemini_Generated_Image_xemzatxemzatxemz.jpg?type=w966&v=20260125">
-    <meta property="og:url" content="https://zzo-building3.pages.dev/?refresh=20260125">
+    <meta property="og:image" content="https://postfiles.pstatic.net/MjAyNjAxMjVfNzAg/MDAxNzY5MjY5MDg4MDY2.VBM1QAwp9KKEt0y1PjbJ0wMOFSIVHeiQHUlS8I0Ds6Ag.TAU0SGw-nb3FsChQIif-nAj67EcZKhXs5aL1Xi2ey3Yg.JPEG/Gemini_Generated_Image_xemzatxemzatxemz.jpg?type=w966&v=fixed2026">
+    <meta property="og:url" content="https://zzo-building3.pages.dev/?update=final">
     <meta property="og:type" content="website">
-
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="뷰스타 쪼 - borareview">
-    <meta name="twitter:description" content="(당신을 위한 최저가 큐레이션)">
-    <meta name="twitter:image" content="https://postfiles.pstatic.net/MjAyNjAxMjVfNzAg/MDAxNzY5MjY5MDg4MDY2.VBM1QAwp9KKEt0y1PjbJ0wMOFSIVHeiQHUlS8I0Ds6Ag.TAU0SGw-nb3FsChQIif-nAj67EcZKhXs5aL1Xi2ey3Yg.JPEG/Gemini_Generated_Image_xemzatxemzatxemz.jpg?type=w966&v=20260125">
-
-    <link rel="image_src" href="https://postfiles.pstatic.net/MjAyNjAxMjVfNzAg/MDAxNzY5MjY5MDg4MDY2.VBM1QAwp9KKEt0y1PjbJ0wMOFSIVHeiQHUlS8I0Ds6Ag.TAU0SGw-nb3FsChQIif-nAj67EcZKhXs5aL1Xi2ey3Yg.JPEG/Gemini_Generated_Image_xemzatxemzatxemz.jpg?type=w966&v=20260125">
+    <meta name="twitter:image" content="https://postfiles.pstatic.net/MjAyNjAxMjVfNzAg/MDAxNzY5MjY5MDg4MDY2.VBM1QAwp9KKEt0y1PjbJ0wMOFSIVHeiQHUlS8I0Ds6Ag.TAU0SGw-nb3FsChQIif-nAj67EcZKhXs5aL1Xi2ey3Yg.JPEG/Gemini_Generated_Image_xemzatxemzatxemz.jpg?type=w966&v=fixed2026">
+    <link rel="image_src" href="https://postfiles.pstatic.net/MjAyNjAxMjVfNzAg/MDAxNzY5MjY5MDg4MDY2.VBM1QAwp9KKEt0y1PjbJ0wMOFSIVHeiQHUlS8I0Ds6Ag.TAU0SGw-nb3FsChQIif-nAj67EcZKhXs5aL1Xi2ey3Yg.JPEG/Gemini_Generated_Image_xemzatxemzatxemz.jpg?type=w966&v=fixed2026">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -62,12 +57,14 @@
         .visitor-counter { margin: 15px 0 5px; font-size: 0.75rem; color: rgba(255, 255, 255, 0.9); background: rgba(0, 0, 0, 0.15); padding: 8px 18px; border-radius: 20px; display: flex; gap: 15px; border: 1px solid rgba(255, 255, 255, 0.2); }
         .visitor-counter b { color: #fff; font-weight: 700; }
         footer { width: 100%; text-align: center; padding-bottom: 30px; display: flex; flex-direction: column; align-items: center; }
-        .footer-text { font-size: 0.65rem; color: rgba(255, 255, 255, 0.7); line-height: 1.6; padding: 0 20px; margin-top: 10px; }
+        .footer-text { font-size: 0.65rem; color: rgba(255, 255, 255, 0.7); line-height: 1.6; padding: 0 | 20px; margin-top: 10px; }
         @media (max-width: 480px) { .section-card, .horo-card { padding: 12px 18px; } }
     </style>
 </head>
 <body onload="initCounter()">
-    <img src="https://postfiles.pstatic.net/MjAyNjAxMjVfNzAg/MDAxNzY5MjY5MDg4MDY2.VBM1QAwp9KKEt0y1PjbJ0wMOFSIVHeiQHUlS8I0Ds6Ag.TAU0SGw-nb3FsChQIif-nAj67EcZKhXs5aL1Xi2ey3Yg.JPEG/Gemini_Generated_Image_xemzatxemzatxemz.jpg?type=w966" style="width:1px; height:1px; position:absolute; top:0; left:0; opacity:0.01; pointer-events:none;" alt="Thumbnail">
+    <div style="display:none; visibility:hidden;">
+        <img src="https://postfiles.pstatic.net/MjAyNjAxMjVfNzAg/MDAxNzY5MjY5MDg4MDY2.VBM1QAwp9KKEt0y1PjbJ0wMOFSIVHeiQHUlS8I0Ds6Ag.TAU0SGw-nb3FsChQIif-nAj67EcZKhXs5aL1Xi2ey3Yg.JPEG/Gemini_Generated_Image_xemzatxemzatxemz.jpg?type=w966" alt="최저가 모음">
+    </div>
 
     <div class="top-container">
         <header>
@@ -97,24 +94,14 @@
         </div>
 
         <div class="deal-group">
-            <a href="https://link.coupang.com/a/dyHzTw" target="_blank" class="link-item"><img src="https://m.blick.kr/web/product/extra/big/202411/db8e8a474be44f7e8c56419b7be6326f.png" class="link-thumb"><span class="link-text">대기업 보다 좋아서 쓰는 빔프로젝터</span><img src="https://postfiles.pstatic.net/MjAyNTA0MThfMTQg/MDAxNzQ0OTgxMDg0MDQ1.8lZw6vQg_UqZxQSjSqjI_50KhLbZzphSgu5FqZNmtCQg.yakdX1BU2kRR5xOVNhKx9vFx4LR-mNzv6kfvSQsc6cQg.JPEG/%EB%B9%94%ED%94%84%EB%A1%9C%EC%A0%9D%ED%84%B0.jpg?type=w966" class="effect-img"></a>
-            <a href="https://link.coupang.com/a/dyLnqT" target="_blank" class="link-item"><img src="https://cafe24img.poxo.com/manfidence/web/product/big/202409/06713d5e39ff4671b9e216177fccba20.jpg" class="link-thumb"><span class="link-text">서현의 몸매 비결? 빨간통 다이어트</span></a>
+            <a href="https://link.coupang.com/a/dyHzTw" target="_blank" class="link-item"><img src="https://m.blick.kr/web/product/extra/big/202411/db8e8a474be44f7e8c56419b7be6326f.png" class="link-thumb" loading="lazy"><span class="link-text">대기업 보다 좋아서 쓰는 빔프로젝터</span><img src="https://postfiles.pstatic.net/MjAyNTA0MThfMTQg/MDAxNzQ0OTgxMDg0MDQ1.8lZw6vQg_UqZxQSjSqjI_50KhLbZzphSgu5FqZNmtCQg.yakdX1BU2kRR5xOVNhKx9vFx4LR-mNzv6kfvSQsc6cQg.JPEG/%EB%B9%94%ED%94%84%EB%A1%9C%EC%A0%9D%ED%84%B0.jpg?type=w966" class="effect-img" loading="lazy"></a>
+            <a href="https://link.coupang.com/a/dyLnqT" target="_blank" class="link-item"><img src="https://cafe24img.poxo.com/manfidence/web/product/big/202409/06713d5e39ff4671b9e216177fccba20.jpg" class="link-thumb" loading="lazy"><span class="link-text">서현의 몸매 비결? 빨간통 다이어트</span></a>
         </div>
 
         <div class="section-card"><div class="section-title">📊 BMI 지수 계산기</div><div style="display: flex; gap: 8px;"><div class="calc-group" style="flex: 1;"><label class="calc-label">키(cm)</label><input type="number" id="bmiH" class="calc-input" placeholder="163" oninput="calcBMI()"></div><div class="calc-group" style="flex: 1;"><label class="calc-label">몸무게(kg)</label><input type="number" id="bmiW" class="calc-input" placeholder="50" oninput="calcBMI()"></div></div><div class="res-box"><div class="val" id="bmiRes">0.0</div><div class="label" id="bmiStatus">대기 중</div></div></div>
-
-        <div class="deal-group">
-            <a href="https://link.coupang.com/a/dqIJZb" target="_blank" class="link-item"><img src="https://sitem.ssgcdn.com/01/83/31/item/1000433318301_i1_1200.jpg" class="link-thumb"><span class="link-text">효과 본 김남주 맥주 효모 핫딜</span><img src="https://postfiles.pstatic.net/MjAyNjAxMTNfNTIg/MDAxNzY4Mjk1NDI0NjAw.xR3WsmIqgkThSc0iAkxkA96EEVkDnA8avuOployLkzgg.E0-tmA4SPbTx_e6fkayYipe2myfRTDEdpiyLIP-FIR4g.JPEG/1.jpg?type=w966" class="effect-img"></a>
-            <a href="https://kr.iherb.com/pr/now-foods-brewer-s-yeast-650-mg-200-tablets/48771?rcode=FEG9985" target="_blank" class="link-item"><img src="https://cloudinary.images-iherb.com/image/upload/f_auto,q_auto:eco/images/now/now02410/v/68.jpg" class="link-thumb"><span class="link-text">"가성비" 아이허브 맥주효모 1만원 대</span></a>
-        </div>
-
-        <div class="horo-card"><div class="section-title" style="color: #856404;">🔮 별자리 운세 & 행운 아이템</div><div class="calc-group"><select id="zodiacSelect" class="calc-select" onchange="showHoroscope()"><option value="">별자리를 선택하세요</option><option value="1">물병자리 (1.20~2.18)</option><option value="2">물고기자리 (2.19~3.20)</option><option value="3">양자리 (3.21~4.19)</option><option value="4">황소자리 (4.20~5.20)</option><option value="5">쌍둥이자리 (5.21~6.21)</option><option value="6">게자리 (6.22~7.22)</option><option value="7">사자자리 (7.23~8.22)</option><option value="8">처녀자리 (8.23~9.23)</option><option value="9">천칭자리 (9.24~10.22)</option><option value="10">전갈자리 (10.23~11.22)</option><option value="11">사수자리 (11.23~12.24)</option><option value="12">염소자리 (12.25~1.19)</option></select></div><div id="horoContent" class="horo-content"></div><div id="luckyItemArea"></div></div>
-
-        <div class="deal-group">
-            <a href="https://link.coupang.com/a/dyGXsN" target="_blank" class="link-item"><img src="https://cdn.imweb.me/thumbnail/20251212/cb85cec76f249.jpg" class="link-thumb"><span class="link-text">집에서 하는 천국의 계단? 칼로리 순삭!</span></a>
-            <a href="https://naver.me/5cqnj2Vn" target="_blank" class="link-item"><img src="https://sitem.ssgcdn.com/11/80/03/item/1000588038011_i1_750.jpg" class="link-thumb"><span class="link-text">평점 4.8 리얼 후기 가성비 러닝머신</span></a>
-            <a href="https://oy.run/4qG1a95" target="_blank" class="link-item"><img src="https://postfiles.pstatic.net/MjAyNjAxMTJfNDIg/MDAxNzY4MTg3ODkwMjk4.5UAsq8Ytcukl1x-VqXJpZevIlqGlmPI5c8oD9M7eEi4g.zLDZALH89ApqENzxEeXkuAEdIgr3rbS40dzqGlveq_og.PNG/6.png?type=w966" class="link-thumb"><span class="link-text">야노시호 마시는 샐러드 최저가</span></a>
-        </div>
+        <div class="deal-group"><a href="https://link.coupang.com/a/dqIJZb" target="_blank" class="link-item"><img src="https://sitem.ssgcdn.com/01/83/31/item/1000433318301_i1_1200.jpg" class="link-thumb"><span class="link-text">효과 본 김남주 맥주 효모 핫딜</span><img src="https://postfiles.pstatic.net/MjAyNjAxMTNfNTIg/MDAxNzY4Mjk1NDI0NjAw.xR3WsmIqgkThSc0iAkxkA96EEVkDnA8avuOployLkzgg.E0-tmA4SPbTx_e6fkayYipe2myfRTDEdpiyLIP-FIR4g.JPEG/1.jpg?type=w966" class="effect-img"></a></div>
+        <div class="horo-card"><div class="section-title" style="color:#856404;">🔮 별자리 운세 & 행운 아이템</div><div class="calc-group"><select id="zodiacSelect" class="calc-select" onchange="showHoroscope()"><option value="">별자리를 선택하세요</option><option value="1">물병자리 (1.20~2.18)</option><option value="2">물고기자리 (2.19~3.20)</option><option value="3">양자리 (3.21~4.19)</option><option value="4">황소자리 (4.20~5.20)</option><option value="5">쌍둥이자리 (5.21~6.21)</option><option value="6">게자리 (6.22~7.22)</option><option value="7">사자자리 (7.23~8.22)</option><option value="8">처녀자리 (8.23~9.23)</option><option value="9">천칭자리 (9.24~10.22)</option><option value="10">전갈자리 (10.23~11.22)</option><option value="11">사수자리 (11.23~12.24)</option><option value="12">염소자리 (12.25~1.19)</option></select></div><div id="horoContent" class="horo-content"></div><div id="luckyItemArea"></div></div>
+        <div class="deal-group"><a href="https://oy.run/4qG1a95" target="_blank" class="link-item"><img src="https://postfiles.pstatic.net/MjAyNjAxMTJfNDIg/MDAxNzY4MTg3ODkwMjk4.5UAsq8Ytcukl1x-VqXJpZevIlqGlmPI5c8oD9M7eEi4g.zLDZALH89ApqENzxEeXkuAEdIgr3rbS40dzqGlveq_og.PNG/6.png?type=w966" class="link-thumb"><span class="link-text">야노시호 마시는 샐러드 최저가</span></a></div>
     </div>
 
     <footer>
@@ -123,7 +110,6 @@
     </footer>
 
     <script>
-        // 한국 시간 기준 방문객 카운터 로직 (네임스페이스 갱신으로 캐시 무력화)
         async function initCounter() {
             const namespace = "borareview_v3_bulletproof"; 
             const kstDate = new Intl.DateTimeFormat('ko-KR', { timeZone: 'Asia/Seoul', year: 'numeric', month: '2-digit', day: '2-digit' }).format(new Date()).replace(/\. /g, '').replace(/\./g, '');
@@ -137,25 +123,24 @@
                 document.getElementById('today-count').innerText = todayData.count.toLocaleString();
             } catch (e) { document.getElementById('today-count').innerText = "1"; document.getElementById('total-count').innerText = "1,000+"; }
         }
-
-        // 도구 로직 및 별자리 로테이션 복구
         function calcAnalysis() {
-            const avgData = { male: { 20: 174.4, 30: 174.9, 40: 173.2, 50: 170.5 }, female: { 20: 161.3, 30: 161.9, 40: 160.2, 50: 157.6 } };
-            const g = document.getElementById('analGender').value, h = parseFloat(document.getElementById('analH').value);
-            if (h > 0) { document.getElementById('stdW').innerText = (Math.pow(h/100, 2) * 22).toFixed(1) + "kg"; document.getElementById('beautyW').innerText = (Math.pow(h/100, 2) * 19).toFixed(1) + "kg"; }
+            const h = parseFloat(document.getElementById('analH').value);
+            if (h > 0) {
+                document.getElementById('stdW').innerText = (Math.pow(h/100, 2) * 22).toFixed(1) + "kg";
+                document.getElementById('beautyW').innerText = (Math.pow(h/100, 2) * 19).toFixed(1) + "kg";
+            }
         }
         function calcBMI() {
             const h = document.getElementById('bmiH').value / 100, w = document.getElementById('bmiW').value;
             if (h > 0 && w > 0) { document.getElementById('bmiRes').innerText = (w / (h * h)).toFixed(1); }
         }
-        const fengShuiItems = [ { name: "싱잉볼", reason: "맑은 소리가 필요합니다. 현관에서 기운을 정화시켜보세요.", url: "https://link.coupang.com/a/dyKsFd", img: "https://t4c.coupangcdn.com/thumbnails/remote/212x212ex/image/vendor_inventory/cef7/0bc01026da60025c185c3140e2c75143dfa47f067f2d004af9588d69848d.jpg" }, { name: "장스탠드", reason: "공간의 구석을 비춰 성공운을 깨우세요.", url: "https://ozip.me/PkR1BgA?af", img: "https://prs.ohou.se/apne2/any/uploads/productions/v1-410686675410944.jpg?w=1280&h=1280&c=c" } ];
-        const experts = [ "🔱 <b>오늘의 천체 흐름 정밀 분석</b><br>토성과 목성이 조화를 이루는 길일입니다.", "🔥 <b>오늘의 천체 흐름 정밀 분석</b><br>화성의 열정적인 에너지가 당신을 자극하는 날입니다." ];
+        const fengShuiItems = [ { name: "싱잉볼", reason: "현관에서 기운을 정화시켜보세요.", url: "https://link.coupang.com/a/dyKsFd", img: "https://t4c.coupangcdn.com/thumbnails/remote/212x212ex/image/vendor_inventory/cef7/0bc01026da60025c185c3140e2c75143dfa47f067f2d004af9588d69848d.jpg" }, { name: "장스탠드", reason: "공간의 구석을 비춰 성공운을 깨우세요.", url: "https://ozip.me/PkR1BgA?af", img: "https://prs.ohou.se/apne2/any/uploads/productions/v1-410686675410944.jpg?w=1280&h=1280&c=c" } ];
+        const experts = [ "🔱 <b>오늘의 천체 흐름</b><br>내실을 기하는 것이 유리합니다.", "🔥 <b>오늘의 천체 흐름</b><br>새로운 결정을 내리기에 적합합니다." ];
         function showHoroscope() {
-            const content = document.getElementById('horoContent'), sign = document.getElementById('zodiacSelect').value, itemArea = document.getElementById('luckyItemArea');
+            const sign = document.getElementById('zodiacSelect').value, itemArea = document.getElementById('luckyItemArea'), content = document.getElementById('horoContent');
             if(sign) {
                 content.style.display = 'block';
-                const now = new Date();
-                const dateSeed = now.getFullYear() * 10000 + (now.getMonth() + 1) * 100 + now.getDate();
+                const now = new Date(), dateSeed = now.getFullYear() * 10000 + (now.getMonth() + 1) * 100 + now.getDate();
                 const combinedIndex = dateSeed + parseInt(sign);
                 content.innerHTML = experts[combinedIndex % experts.length];
                 const item = fengShuiItems[combinedIndex % fengShuiItems.length];
