--- a/index.html
+++ b/index.html
@@ -63,7 +63,14 @@
         #toast { position: fixed; bottom: 50px; left: 50%; transform: translateX(-50%); background: rgba(0,0,0,0.8); color: white; padding: 12px 25px; border-radius: 30px; font-size: 14px; opacity: 0; transition: opacity 0.3s; pointer-events: none; z-index: 1000; }
         #toast.show { opacity: 1; }
 
+        .info-section { text-align: left; margin-top: 40px; padding-top: 30px; border-top: 1px solid #eee; }
+        .info-section h3 { font-size: 18px; color: #1f2937; margin-bottom: 10px; margin-top: 25px; }
+        .info-section p { font-size: 14px; color: #4b5563; line-height: 1.6; margin-bottom: 10px; word-break: keep-all; }
+
         footer { margin-top: 50px; padding: 20px; font-size: 12px; color: #9ca3af; text-align: center; }
+        .footer-links { margin-bottom: 15px; }
+        .footer-links a { color: #6b7280; text-decoration: none; margin: 0 8px; font-weight: 500; transition: 0.2s; }
+        .footer-links a:hover { color: var(--primary-pink); }
         .hidden { display: none; }
     </style>
 </head>
@@ -108,6 +115,32 @@
             <span style="font-size: 12px; color: #9ca3af;" id="upload-sub">사진을 올리면 자동으로 판독이 시작됩니다</span>
             <input type="file" id="img-input" class="hidden" accept="image/*" onchange="processAI(this)">
         </div>
+
+        <!-- Explanatory Text Section -->
+        <div class="info-section">
+            <h3>🧐 체형 진단은 어떤 원리인가요?</h3>
+            <p>
+                본 테스트는 구글의 Teachable Machine 2.0 인공지능 모델을 활용하여 제작되었습니다. 
+                수천 장의 체형 데이터를 학습한 AI가 사용자의 사진에서 어깨 라인, 골반의 너비, 
+                전체적인 실루엣 등 미세한 특징을 추출하여 가장 유사한 골격 유형을 분석합니다.
+            </p>
+            <p>
+                단순히 '마르다/통통하다'를 구분하는 것이 아니라, 타고난 뼈대와 근육의 붙는 방식을 
+                기준으로 <strong>스트레이트(Straight), 웨이브(Wave), 내추럴(Natural)</strong> 
+                세 가지 타입으로 분류합니다.
+            </p>
+            
+            <h3>✨ 왜 내 체형을 알아야 할까요?</h3>
+            <p>
+                "유행하는 옷인데 내가 입으면 이상할까?" 고민해 본 적 있으신가요? 
+                그것은 몸매의 문제가 아니라, '내 골격에 맞지 않는 디자인'을 입었기 때문일 수 있습니다.
+            </p>
+            <p>
+                자신의 골격 타입을 알면 <strong>① 단점은 가리고 장점은 부각하는 스타일링</strong>이 가능해지며, 
+                <strong>② 불필요한 옷 쇼핑 실패를 줄여</strong> 경제적인 소비를 할 수 있습니다. 
+                이제 무작정 유행을 쫓기보다, 나를 가장 빛나게 해주는 '인생 핏'을 찾아보세요.
+            </p>
+        </div>
     </div>
 
     <div id="view-loading" class="hidden">
@@ -138,7 +171,14 @@
 
 <div id="toast">링크가 복사되었습니다!</div>
 
-<footer>© 2026 뷰스타 쪼. All rights reserved.</footer>
+<footer>
+    <div class="footer-links">
+        <a href="about.html">서비스 소개</a> | 
+        <a href="privacy.html">개인정보처리방침</a> | 
+        <a href="contact.html">문의하기</a>
+    </div>
+    © 2026 뷰스타 쪼. All rights reserved.
+</footer>
 
 <script>
     let currentLang = 'ko';
