fix: 문의하기 페이지 이메일 주소 업데이트

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 
     <div class="contact-card">
         <p>📧 이메일 문의</p>
-        <div class="email">contact@mybodyshape.com</div>
+        <div class="email">maxshroom@naver.com</div>
         <p style="font-size: 0.9em; color: #666;">(평일 09:00 - 18:00 답변 가능)</p>
     </div>
 </body>
