--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
         document.getElementById('info-desc4').innerHTML = t.infoDesc4;
     }
 
-    const MODEL_URL = "https://teachablemachine.withgoogle.com/models/Y9Y9vIofD/"; 
+    const MODEL_URL = "./my_model/"; 
     let model = null; // Initialize model as null
     let aiData = { S: 0, N: 0, C: 0 }, surveyData = { S: 0, N: 0, C: 0 };
     let currentGender = 'female';
