feat: 개인정보처리방침 페이지 문의 이메일 주소 업데이트

--- a/privacy.html
+++ b/privacy.html
@@ -35,7 +35,7 @@
 
     <h2>4. 문의처</h2>
     <p>서비스 이용과 관련된 문의사항은 아래 연락처로 문의해주시기 바랍니다.</p>
-    <p>이메일: contact@mybodyshape.com (예시 이메일)</p>
+    <p>이메일: maxshroom@naver.com</p>
 
     <p style="margin-top: 50px; font-size: 0.9em; color: #888;">시행일자: 2026년 1월 26일</p>
 </body>
